fix on mobile carousel slide

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,7 +66,6 @@ aside.side-steps {
 // STEP FORMS
 section.form-section {
   grid-area: form;
-  padding-inline: 1rem;
 }
 
 // STEP CONTROLS
@@ -90,12 +89,13 @@ section.form-controls {
       "steps form"
       "steps controls";
     padding: 1rem;
+    gap: 1rem;
   }
 
   aside.side-steps {
     width: clamp(230px, 20vw + 5rem, 280px);
     padding: 2rem;
-    gap: 2rem;
+    gap: clamp(2rem, 5vh + 0.5rem, 3rem);
     flex-direction: column;
     justify-content: start;
     background-image: url("/assets/images/bg-sidebar-desktop.svg");
@@ -115,7 +115,7 @@ section.form-controls {
     margin-inline: auto;
 
     .form-step {
-      padding-block-start: 1rem;
+      padding: 1rem;
     }
   }
 }
@@ -135,11 +135,12 @@ section.form-controls {
   }
 
   section.form-section {
-    margin-top: -5.25rem;
+    margin-top: -7rem;
 
     .form-step {
       background-color: var(--white);
       padding: 1.2rem;
+      margin: 1rem;
       border-radius: 10px;
       box-shadow: 0 5px 20px -3px rgba(120, 120, 120, 0.2);
     }
